force-app/main/default/objects/Structure_Services__c/Structure_Services__c.object-meta.xml
<CustomObject>
    <label>Structure/Services</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Structure/Serviceses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>