force-app/main/default/objects/Structure_Services__c/fields/Local_Department_s_Served__c.field-meta.xml
<CustomField>
    <fullName>Local_Department_s_Served__c</fullName>
    <label>Local Department&apos;s Served</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allegany County</fullName>
            </value>
            <value>
                <fullName>Anne Arundel County</fullName>
            </value>
            <value>
                <fullName>Baltimore City</fullName>
            </value>
            <value>
                <fullName>Baltimore County</fullName>
            </value>
            <value>
                <fullName>Calvert County</fullName>
            </value>
            <value>
                <fullName>Caroline County</fullName>
            </value>
            <value>
                <fullName>Carroll County</fullName>
            </value>
            <value>
                <fullName>Cecil County</fullName>
            </value>
            <value>
                <fullName>Charles County</fullName>
            </value>
            <value>
                <fullName>Dorchester County</fullName>
            </value>
            <value>
                <fullName>Frederick County</fullName>
            </value>
            <value>
                <fullName>Garrett County</fullName>
            </value>
            <value>
                <fullName>Harford County</fullName>
            </value>
            <value>
                <fullName>Howard County</fullName>
            </value>
            <value>
                <fullName>Kent County</fullName>
            </value>
            <value>
                <fullName>Montgomery County</fullName>
            </value>
            <value>
                <fullName>Prince George&apos;s County</fullName>
            </value>
            <value>
                <fullName>Queen Anne&apos;s County</fullName>
            </value>
            <value>
                <fullName>Somerset County</fullName>
            </value>
            <value>
                <fullName>St. Mary&apos;s County</fullName>
            </value>
            <value>
                <fullName>Talbot County</fullName>
            </value>
            <value>
                <fullName>Washington County</fullName>
            </value>
            <value>
                <fullName>Wicomico County</fullName>
            </value>
            <value>
                <fullName>Worcester County</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>