force-app/main/default/objects/Structure_Services__c/fields/Placement_Structure_Service__c.field-meta.xml
<CustomField>
    <fullName>Placement_Structure_Service__c</fullName>
    <label>Placement Structure/Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Placement Structure</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>