force-app/main/default/objects/Structure_Services__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Structure/Services</relationshipLabel>
    <relationshipName>Structure_Serviceses</relationshipName>
    <type>Lookup</type>
</CustomField>