force-app/main/default/objects/Structure_Services__c/fields/Service_Placement_Structure__c.field-meta.xml
<CustomField>
    <fullName>Service_Placement_Structure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service/Placement Structure</label>
    <type>Checkbox</type>
</CustomField>